Upgrade org.controlsfx to version 11.2.1